--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.2.10",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
