--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
+    "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
