--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-type-animation": "^3.2.0",
     "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0"
